# ExpirationTimer

./: README.md
apple_uuid/: README.md  apple_uuid.cmake  apple_uuid.cpp  apple_uuid.h
chrono/: CMakeLists.txt  README.md  exp_chrono.cmake  exp_chrono.cpp  exp_chrono.h  test.cpp
serial/: CMakeLists.txt  README.md  exp_serial.cmake  exp_serial.cpp  exp_serial.h  test.cpp
windows_curl/: CMakeLists.txt  exp_curl.h  test.cpp
windows_sntp/: CMakeLists.txt  NTP_client.cpp  NTP_client.h  test.cpp
